Force light color scheme to prevent browser dark mode override

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color-scheme: light only;
 }
 
 body {
